--- a/common/math/graphics/dsp/iir2rphi.tex
+++ b/common/math/graphics/dsp/iir2rphi.tex
@@ -44,8 +44,8 @@
   \uput[ 90](1, 0    ){$\scy 1$}% 
   \uput[ 45](0, 1    ){$\scy 1$}% 
   \uput[-45](0,-1    ){$\scy-1$}% 
-  \uput[ 45](0, 2.414){$\scy \sqrt{3+\sqrt{8}}\eqa 2.414$}% 
-  \uput[ 45](0, 0.414){$\scy \sqrt{3-\sqrt{8}}\eqa 0.414$}% 
-  \uput[-45](0,-0.414){$\scy-\sqrt{3-\sqrt{8}}\eqa-0.414$}% 
-  \uput[-45](0,-2.414){$\scy-\sqrt{3+\sqrt{8}}\eqa-2.414$}% 
+  \uput[ 45](0, 2.414){$\scy 1+\sqrt{2}\eqa 2.414$}% 
+  \uput[ 45](0, 0.414){$\scy \sqrt{2}-1\eqa 0.414$}% 
+  \uput[-45](0,-0.414){$\scy 1-\sqrt{2}\eqa-0.414$}% 
+  \uput[-45](0,-2.414){$\scy-1-\sqrt{2}\eqa-2.414$}% 
 \end{pspicture}%
