--- a/common/estimate.tex
+++ b/common/estimate.tex
@@ -176,14 +176,14 @@ $\begin{array}{FlM}
 \\
 Then the following \fnctd{estimator function}s are defined as follows:
 \defbox{\begin{array}{FMMlc>{\ds}l}
-     (1).&\fnctd{Bayesian estimator}                         &                           & \estB   &\eqd& \arg\min_\theta C(\theta,\pdfp(x,y)) 
-   \\(2).&\fnctd{Mean square estimator}                      &(``\fnctd{MS  estimator}") & \estMS  &\eqd& \arg\min_\theta \E\norm{C(\theta,\pdfp(x,y))}^2 
-   \\(3).&\fnctd{mini-max estimator}                         &(``\fnctd{MM  estimator}") & \estMM  &\eqd& \arg\min_\theta\max_\pdfp C(\theta,\pdfp(x,y)) 
+     (1).&\fnctd{Bayesian estimator}                         &                           & \estB   &\eqd& \arg\min_{\theta} C(\theta,\pdfp(x,y)) 
+   \\(2).&\fnctd{Mean square estimator}                      &(``\fnctd{MS  estimator}") & \estMS  &\eqd& \arg\min_{\theta} \E\norm{C(\theta,\pdfp(x,y))}^2 
+   \\(3).&\fnctd{mini-max estimator}                         &(``\fnctd{MM  estimator}") & \estMM  &\eqd& \arg\min_{\theta}\max_{\pdfp} C(\theta,\pdfp(x,y)) 
    \\(4).&\mc{2}{M}{\begin{tabular}[t]{@{}l}\fnctd{maximum a-posteriori probability estimator}\\
                                          (``\fnctd{MAP estimator}")
                     \end{tabular}}
-         & \estMAP &\eqd& \arg\max_\theta \pP{x(t;\theta)|y(t)} 
-   \\(5).&\fnctd{maximum likelihood estimator}               &(``\fnctd{ML  estimator}") & \estML  &\eqd& \arg\max_\theta \pP{y(t)|x(t;\theta)} 
+         & \estMAP &\eqd& \arg\max_{\theta} \pP{x(t;\theta)|y(t)} 
+   \\(5).&\fnctd{maximum likelihood estimator}               &(``\fnctd{ML  estimator}") & \estML  &\eqd& \arg\max_{\theta} \pP{y(t)|x(t;\theta)} 
 \end{array}}
 \end{definition}
 
@@ -201,15 +201,15 @@ Let $s(t;\theta)$ be a function with unknown parameter $\theta$.
 \begin{proof}
 \begin{align*}
    \estMAP
-     &\eqd \arg\max_\theta \pP{s(t;\theta)|r(t)}
+     &\eqd \arg\max_{\theta} \pP{s(t;\theta)|r(t)}
      &&    \text{by definition of $\estMAP$}
      &&    \text{\xref{def:estMAP}}
-   \\&=    \arg\max_\theta \frac{\pP{s(t;\theta) \land r(t)}}
+   \\&=    \arg\max_{\theta} \frac{\pP{s(t;\theta) \land r(t)}}
                                {\pP{r(t)}}
-   \\&=    \arg\max_\theta \frac{\pP{r(t) | s(t;\theta) }\pP{s(t;\theta) }}
+   \\&=    \arg\max_{\theta} \frac{\pP{r(t) | s(t;\theta) }\pP{s(t;\theta) }}
                                {\pP{r(t)}}
-   \\&=    \arg\max_\theta \pP{r(t) | s(t;\theta) }\pP{s(t;\theta) }
-   \\&=    \arg\max_\theta \pP{r(t) | s(t;\theta) }
+   \\&=    \arg\max_{\theta} \pP{r(t) | s(t;\theta) }\pP{s(t;\theta) }
+   \\&=    \arg\max_{\theta} \pP{r(t) | s(t;\theta) }
    \\&\eqd \estML
      &&  \text{by definition of $\estML$}
      &&  \text{\xref{def:estML}}
@@ -453,12 +453,12 @@ with respect to the same criterion.\footnote{
    \hie{Optimal estimates}:
    \prefpp{def:ML} page~\pageref{def:ML}
    }
-\\\defbox{\begin{array}{llcl}
-   \text{Bayesian:}                               & \estB   &\eqd& \ds \arg\min_\theta C(\theta,\pdfp(s,r)) \\
-   \text{Mean square (MS):}                       & \estMS  &\eqd& \ds \arg\min_\theta \pE\norm{C(\theta,\pdfp(s,r))}^2 \\
-   \text{mini-max (MM):}                          & \estMM  &\eqd& \ds \arg\min_\theta\max_\pdfp C(\theta,\pdfp(s,r)) \\
-   \text{maximum a-posteriori probability (MAP):} & \estMAP &\eqd& \ds \arg\max_\theta \pP{s(t;\theta)|\fr(t)} \\
-   \text{maximum likelihood (ML):}                & \estML  &\eqd& \ds \arg\max_\theta \pP{\fr(t)|s(t;\theta)} \\
+\\{\defbox{\begin{array}{MM>{\ds}lc>{\ds}l}
+   \ope{Bayesian}:                        &             & \estB   &\eqd& \arg\min_{\theta} C(\theta,\pdfp(s,r)) \\
+   \ope{Mean square}                      &(\ope{MS}):  & \estMS  &\eqd& \arg\min_{\theta} \pE\norm{C(\theta,\pdfp(s,r))}^2 \\
+   \ope{mini-max}                         &(\ope{MM}):  & \estMM  &\eqd& \arg\min_{\theta}\max_{\pdfp} C(\theta,\pdfp(s,r)) \\
+   \ope{maximum a-posteriori probability} &(\ope{MAP}): & \estMAP &\eqd& \arg\max_{\theta} \pP{s(t;\theta)|\fr(t)} \\
+   \ope{maximum likelihood}               &(\ope{ML}):  & \estML  &\eqd& \arg\max_{\theta} \pP{\fr(t)|s(t;\theta)}
 \end{array}}
 
 %======================================
@@ -665,10 +665,10 @@ $\Psi$ an orthonormal basis for $\fs(t;u)$ such that
 \end{align*}
 \thmbox{\begin{array}{Frc>{\ds}l}
    1. & P\set{ \fs(t;u)}{\fr(t)} &=&    P\set{\fs(t;u)}{\fdotr_1,\;\fdotr_2,\ldots,\fdotr_N}            \\
-   2. & \estMAP[u]               &\eqd& \arg\max_u P\set{\fs(t;u)}{\fr(t)} \\
-      &                          &=&    \arg\max_u P\set{\fs(t;u)}{\fdotr_1,\;\fdotr_2,\ldots,\fdotr_N} \\
-   3. & \estML[u]                &\eqd& \arg\max_u P\set{\fr(t)}{\fs(t;u)} \\
-      &                          &=&    \arg\max_u P\set{\fdotr_1,\;\fdotr_2,\ldots,\fdotr_N}{\fs(t;u)}
+   2. & \estMAP[u]               &\eqd& \arg\max_{u} P\set{\fs(t;u)}{\fr(t)} \\
+      &                          &=&    \arg\max_{u} P\set{\fs(t;u)}{\fdotr_1,\;\fdotr_2,\ldots,\fdotr_N} \\
+   3. & \estML[u]                &\eqd& \arg\max_{u} P\set{\fr(t)}{\fs(t;u)} \\
+      &                          &=&    \arg\max_{u} P\set{\fdotr_1,\;\fdotr_2,\ldots,\fdotr_N}{\fs(t;u)}
 \end{array}}
 \end{theorem}
 \begin{proof}
