--- a/common/sty/fonts.sty
+++ b/common/sty/fonts.sty
@@ -29,7 +29,7 @@
 %\usepackage{euler}                   % obliterates a lot of mathematical glyphs ?
  \usepackage{amsmath}                 % AMS math package
  \allowdisplaybreaks[1]               % AMSmath by default doesn't like breaks
- \usepackage{unicode-math}            % unicode math support
+ \usepackage{unicode-math}            % unicode math support. https://ctan.org/pkg/unicode-math
 %\usepackage{mathspec}
 %\usepackage[matha,mathx]{mathabx}    % math symbols (e.g. brackets for \seq{}{}) produces ugly \emptyset and \le "! LaTeX Error: Too many math alphabets used in version normal."
 %2011mar30 \usepackage{amssymb}       % AMS symbols; superset of amsfonts
