--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -505,7 +505,7 @@
  \newcommand{\oreld}      {\ge}                % dual order relation
  \newcommand{\qrel}       {<}                  % quasi-order relation
  \newcommand{\qreld}      {>}                  % dual quasi-order relation
- \newcommand{\orelnot}    {\nle}               % negated order relation
+ \newcommand{\orelnot}    {\nleq}              % negated order relation
  \newcommand{\qrelnot}    {\nless}             % negated quasi-order relation
  \newcommand{\join}       {\vee}               % join
  \newcommand{\meet}       {\wedge}             % meet
@@ -1974,7 +1974,7 @@
 \DeclareMathOperator*{\argmin}{arg\,min}%reference: http://tex.stackexchange.com/questions/5223/command-for-argmin-or-argmax
 \DeclareMathOperator*{\argmax}{arg\,max}%
 %
-\newcommand{\est}    [2][\theta] {\ensuremath{\hat{#1}_{\mathrm{#2}}}} % maximum apriori
+\newcommand{\est}    [2][\theta] {\hat{#1}_{\mathrm{#2}}} % maximum apriori
 \newcommand{\estn}   [1][\theta] {\est[#1]{}}    % no subscript
 \newcommand{\estMAP} [1][\theta] {\est[#1]{map}} % maximum apriori
 \newcommand{\estML}  [1][\theta] {\est[#1]{ml}}  % maximum likelihood
@@ -2304,3 +2304,5 @@
 \renewcommand{\Diamond}{\mdwhtdiamond}
 
 \newcommand{\colxyz}[3]{\brs{\begin{array}{c}#1\\#2\\#3\end{array}}}
+\newcommand{\nle}{\nleq}% \nle seems to have been changed to \nleq
+
