--- a/common/sums.tex
+++ b/common/sums.tex
@@ -51,11 +51,11 @@
 %=======================================
 %--------------------------------------
 \begin{definition}
-\label{def:sum}
 \footnote{\begin{tabular}{ll}
-  ref: & \citerpgc{berberian1961}{8}{0821819127}{Definition~I.3.1}\\
+  reference:          & \citerpgc{berberian1961}{8}{0821819127}{Definition~I.3.1}\\
   ``$\sum$" notation: & \citorp{fourier1820}{280}  %{http://gallica.bnf.fr/ark:/12148/bpt6k33707/f285.image}
 \end{tabular}}
+\label{def:sum}
 %--------------------------------------
 Let $+$ be an addition operator on a tuple $\tuple{x_n}{m}{\xN}$.
 \defbox{\begin{array}{M}
