--- a/common/wavelets/wavstrct.tex
+++ b/common/wavelets/wavstrct.tex
@@ -2647,7 +2647,7 @@ Here are some examples using \fncte{Daubechies wavelet function}s.
    &\fncte{Daubechies-2}
    &\fncte{Daubechies-3}
    %&\fncte{Daubechies-4 wavelet function}
-  \\\xref{ex:dau-p1}&\xref{ex:dau-p2}&\xref{ex:dau-p3}
+  \\\ifxref{compactp}{ex:dau-p1}&\ifxref{compactp}{ex:dau-p2}&\ifxref{compactp}{ex:dau-p3}
 \end{array}}
 \end{example}
 
