--- a/common/zht/zhtchar.tex
+++ b/common/zht/zhtchar.tex
@@ -66,7 +66,9 @@ Each such rendering is called a \hib{glyph}.
 \exboxt{
   In English, all these \hib{glyphs} (font typefaces) represent {the same} \hib{grapheme} (character):
   \\\indentx\Huge
-  {\fntSimple a}, {\fntUMtypewriter a}, {\fntHeuristica a}, {\fntPrintDashed a}, {\fntLavi a}, {\fntZapf a}
+  %{\fntSimple a}, 
+  {\fntUMtypewriter a}, {\fntHeuristica a}, %{\fntPrintDashed a}, 
+  {\fntLavi a}, {\fntZapf a}
   }
 \end{example}
 
