--- a/common/ztricks.tex
+++ b/common/ztricks.tex
@@ -4,7 +4,7 @@
 %============================================================================
 
 %=======================================
-\chapter{Magic Tricks in the World of z}
+\chapter{Filtering Tricks}
 %=======================================
 
 %---------------------------------------
@@ -21,23 +21,20 @@ What we want:
   \\\hline
 \end{tabular}
 
-%\includegraphics{../common/graphics/misc/wizard_dragon_4953570.jpg}
 
-
-
-\includegraphics[width=\tw-50mm]{graphics/linear.pdf}
+\includegraphics{graphics/linear.pdf}
 
 Which one is \prope{linear}?
 
 
 
-\includegraphics[width=\tw-50mm]{graphics/nonti.pdf}
+\includegraphics{graphics/nonti.pdf}
 
 Is the filter \prope{time-invariant}?
 
 
 
-\includegraphics[width=\tw-50mm]{graphics/cosLcos.pdf}
+\includegraphics{graphics/cosLcos.pdf}
 
 \prope{linear} + \prope{time-invariant} = \prope{LTI}
 
@@ -68,14 +65,14 @@ Note:
   Il convient que ces choses, diff\'erentes par la mati\`ere, 
   soient semblables par la forme, 
   \ldots
-  %qu'elles puissent, 
-  %pour ainsi dire, se couler dans le m\^eme moule. 
-  %Quand le langage a \'et\'e bien choisi, 
+  qu'elles puissent, 
+  pour ainsi dire, se couler dans le m\^eme moule. 
+  Quand le langage a \'et\'e bien choisi, 
   on est tout \'etonn\'e 
   de voir que toutes les d\'emonstrations, faites pour un objet connu, 
   s'appliquent imm\'ediatement \`a beaucoup d'objets nouveaux ; 
   \ldots
-  %on n'a rien \`a y changer, pas m\^eme les mots, puisque les noms sont devenus les m\^emes.
+  on n'a rien \`a y changer, pas m\^eme les mots, puisque les noms sont devenus les m\^emes.
   }
   %
   {I think I have already said somewhere that mathematics is the art
@@ -83,15 +80,15 @@ Note:
    It is enough that these things, though differing in matter, 
    should be similar in form, 
    \ldots
-   %to permit of their being, so to speak,
-   %run in the same mould.
-   %When language has been well chosen, 
+   to permit of their being, so to speak,
+   run in the same mould.
+   When language has been well chosen, 
    one is astonished to find that all
    demonstrations made for a known object apply immediately to many new objects:
    \ldots
-   %nothing requires to be changed, 
-   %not even the terms,
-   %since the names have become the same.
+   nothing requires to be changed, 
+   not even the terms,
+   since the names have become the same.
    }
   \citetblt{
     quote:   & \citerc{poincare_sam}{book 1, chapter 2, paragraph 20} \\
@@ -182,12 +179,8 @@ Let $\spW$, $\spX$, $\spY$, and $\spZ$ be linear spaces over a field $\F$.
   }
 %\end{theorem}
 
-
-
-
-
 \tbox{$\ds X(z)\eqd\sum_{n\in\Z} \fx[n] z^{-n}$}
-\tbox{\includegraphics[width=100mm]{graphics/ziir2.pdf}}
+\tbox{\includegraphics{graphics/ziir2.pdf}}
 \tbox{$\ds Y(z)\eqd\sum_{n\in\Z} \fy[n] z^{-n}$}
 
 \indentx\begin{tabular}{cl}
@@ -196,10 +189,8 @@ Let $\spW$, $\spX$, $\spY$, and $\spZ$ be linear spaces over a field $\F$.
   \\\imark&Is it \prope{tractable}?
 \end{tabular}
 
-
-
 \tbox{$\ds X(z)$}
-\tbox{\includegraphics[width=100mm]{graphics/ziir2.pdf}}
+\tbox{\includegraphics{graphics/ziir2.pdf}}
 \tbox{$\ds Y(z)$}
 \begin{align*}
   H(z)\eqd \frac{Y(z)}{X(z)}
@@ -210,8 +201,6 @@ Let $\spW$, $\spX$, $\spY$, and $\spZ$ be linear spaces over a field $\F$.
   \\Y(z)\brs{a_0 + a_1 z^{-1} + a_2z^{-2}}
     &= X(z) \brs{b_0 + b_1 z^{-1} + b_2z^{-2}}
 \end{align*}
-
-
 
 If $a_0=1$ then
 
@@ -227,9 +216,6 @@ If $a_0=1$ then
   \\&\eqd \opZ\seqn{a\fx[n]}                  && \text{by definition of $\opZ$ operator}
 \end{align*}
 
-
-
-
 \begin{align*}
   z^{-2}X(z) 
     &= z^{-2} \opZ\seqn{\fx[n]}
@@ -243,12 +229,9 @@ If $a_0=1$ then
   \\&\eqd \opZ\seqn{\fx[n-2]}
     && \text{by definition of $\opZ$ operator}
 \end{align*}
-\\
-
-
 
 %---------------------------------------
-\section*{Trick \# 1: From the Domain of z Back to the real world}
+\section*{Trick \# 1: From z-domain back to time-domain}
 %---------------------------------------
 
 \begin{align*}
@@ -317,7 +300,7 @@ Example:
 \section*{Trick \# 3: The 0Hz Gain}
 %---------------------------------------
 \tbox{$\ds X(z)$}
-\tbox{\includegraphics[width=100mm]{graphics/ziir2.pdf}}
+\tbox{\includegraphics{graphics/ziir2.pdf}}
 \tbox{$\ds Y(z)$}
 
 $\ds\begin{array}{rclM}
@@ -338,7 +321,7 @@ $\ds\begin{array}{rclM}
 \section*{Trick \# 4: The Fs/2 Gain}
 %---------------------------------------
 \tbox{$\ds X(z)$}
-\tbox{\includegraphics[width=100mm]{graphics/ziir2.pdf}}
+\tbox{\includegraphics{graphics/ziir2.pdf}}
 \tbox{$\ds Y(z)$}
 
 
@@ -356,11 +339,10 @@ $\ds\begin{array}{rclM}
 %---------------------------------------
 
 \begin{tabular}{cc}
-    \includegraphics{graphics/pz_unstable.pdf}%
+    \includegraphics{graphics/pz_unstable.pdf}
    &\includegraphics{graphics/pz_stable.pdf}%
-  \\\prope{unstable}&\prope{stable}
-  \\\includegraphics{../common/graphics/emotions/bear_surprisedL_4955791.jpg}
-   &\includegraphics{../common/graphics/emotions/bear_happy_4954937.jpg}
+  \\\prope{unstable}                          
+   &\prope{stable}
 \end{tabular}
 
 
@@ -429,7 +411,7 @@ $\begin{array}{ccccc}
 
 
 %---------------------------------------
-\section*{Trick \# 7: But for more symmetry, put some inside and some outside}
+\section*{Trick \# 7: For more symmetry, put some zeros inside and some outside the unit circle}
 %---------------------------------------
 
   \exboxt{\begin{tabular}{c|c}
@@ -455,11 +437,6 @@ $\begin{array}{ccccc}
     &\tbox{$=$}&
      \tbox{\includegraphics{graphics/pz_unall.pdf}}
   \\unstable&&all-pass&&stable!
-  \\\includegraphics{../common/graphics/emotions/bear_surprisedL_4955791.jpg}
-    &&
-    \includegraphics{../common/graphics/superhero/rush_superhero_4954908.jpg}
-    &&
-    \includegraphics{../common/graphics/emotions/bear_happy_4954937.jpg}
 \end{tabular}
 
 
@@ -514,16 +491,11 @@ True or False? This filter has no poles:
 
 \includegraphics{graphics/pz_pole00.pdf}
 
-
-
-
 %---------------------------------------
 \section*{Trick \# 10: Have a low-pass but a high-pass need? Just put a minus in front of z!}
 %---------------------------------------
-
 Suppose $\Zh(z)$ is a \propb{low-pass} filter. \qquad Then what is  $\Zh(-z)$?
-
-{\begin{align*}
+\begin{align*}
   \abs{\Fg(\omega)}^2
     &\eqd \abs{\Zh(-z)}_{z=e^{i\omega}}
     && \text{by definition of $\Fg(\omega)$}
@@ -532,6 +504,6 @@ Suppose $\Zh(z)$ is a \propb{low-pass} filter. \qquad Then what is  $\Zh(-z)$?
   \\&= \abs{\Zh(z)}_{z=e^{i(\omega-\pi)}}
   \\&\eqd \abs{\Fh(\omega-\pi)}^2
     && \text{by definition of $\Fh(\omega)$}
-\end{align*}}
+\end{align*}
 
 
