--- a/dsp/front.tex
+++ b/dsp/front.tex
@@ -96,15 +96,7 @@
 \renewcommand{\headrulewidth}{1pt}
 \thispagestyle{empty}%
 \mbox{}\\\vfill
-%\addcontentsline{toc}{section}{Copyright}
-\addcontentsline{toc}{section}{Copyright and typesetting}
-{\fntHeros\copyrightstamp
-%Copyright {\textcopyright} 2017 Daniel J. Greenhoe
-%\\All rights reserved
-%\\ISBN 978-0-9838011-1-5
-%\\draft version 0.2
-}
-\vfill
+\addcontentsline{toc}{section}{Typesetting}
 {\sffamily
 This text was typeset using \hi{\XeLaTeX},
 which is part of the \TeX family of typesetting engines, 
