--- a/dsp/main.tex
+++ b/dsp/main.tex
@@ -77,8 +77,7 @@
  \dochas{transop}
  \dochas{mra}
  \dochas{wavstrct}
- \dochas{partuni}
- \dochas{pounity}
+ %\dochas{partuni}
  \dochas{vanish}
  \dochas{ortho}
  \dochas{compactp}
@@ -167,11 +166,11 @@
 \include{../common/src}
 \include{../common/ztricks}
 \include{../common/zchar}
-\include{../common/zcalc}
+%\include{../common/zcalc}
+\include{../common/zcalc1}
+\include{../common/zcalc2}
+\include{../common/zcalc2p}
 \include{../common/dspcalculus}
-
-
-
 
 %--------------------------------------
 % appendixes
@@ -182,7 +181,6 @@
   \ifDocHasCommonInclude{transop}
   \ifDocHasCommonInclude{mra}
   \ifDocHasWaveletsInclude{fwt}
-%  \ifDocHasWaveletsInclude{pounity}
 %  \ifDocHasWaveletsInclude{wavstrct}
 %  \ifDocHasWaveletsInclude{vanish}
 %  \ifDocHasWaveletsInclude{ortho}
@@ -208,7 +206,7 @@
 %    \ifDocHasCommonInclude{functionals}
 %    \ifDocHasCommonInclude{vsnorm}
 %    \ifDocHasCommonInclude{vsinprod}
-%    \ifDocHasCommonInclude{operator}
+    \ifDocHasCommonInclude{operator}
     \ifDocHasCommonInclude{integrat}
     \include{../common/calculus}
 %
