graphics files for dsp presentation

--- a/dsp/main.tex
+++ b/dsp/main.tex
@@ -161,6 +161,7 @@
 %--------------------------------------
 % main matter
 %--------------------------------------
+ \ifDocHasCommonInclude{interpo}
  \ifDocHasCommonInclude{dsp}
  \ifDocHasCommonInclude{dtft}
 \include{../common/src}
