--- a/common/bwav.tex
+++ b/common/bwav.tex
@@ -872,8 +872,7 @@ Let $g_k=(-1)^k h_{1-k}$ (\fncte{CQF constraints}---\prefp{thm:cqf}).
               \brs{\begin{array}{rrr|rrr}0 &  0 & 4 & 1 &-1 & 2\\
                                         1 &  0 &-1 & 0 & 1 &-1\\
                                         0 &  1 &-2 & 0 & 0 &-1\end{array}}
-              \\
-              &\rightarrow
+            \\&\rightarrow
               \brs{\begin{array}{rrr|rrr}0 &  0 & 1 & \sfrac{1}{4} &-\sfrac{1}{4} & \sfrac{2}{4}\\
                                         1 &  0 & 0 & \sfrac{1}{4} & \sfrac{3}{4} &-\sfrac{2}{4}\\
                                         0 &  1 & 0 & \sfrac{2}{4} &-\sfrac{2}{4} & 0           \end{array}}
@@ -881,9 +880,9 @@ Let $g_k=(-1)^k h_{1-k}$ (\fncte{CQF constraints}---\prefp{thm:cqf}).
               \brs{\begin{array}{rrr|rrr}1 &  0 & 0 & \sfrac{1}{4} & \sfrac{3}{4} &-\sfrac{2}{4}\\
                                         0 &  1 & 0 & \sfrac{2}{4} &-\sfrac{2}{4} & 0           \\
                                         0 &  0 & 1 & \sfrac{1}{4} &-\sfrac{1}{4} & \sfrac{2}{4}\end{array}}
-              &&\implies \opAi= \frac{1}{4}\brs{\begin{array}{rrr}1 & 3 & -2\\
-                                                                   2 &-2 &  0\\
-                                                                   1 &-1 &  2\end{array}}
+            \\&\implies \opAi= \frac{1}{4}\brs{\begin{array}{rrr}1 & 3 & -2\\
+                                                                 2 &-2 &  0\\
+                                                                 1 &-1 &  2\end{array}}
             \end{align*}
 
       \item Proof for the values of $\seqn{h_k}$ (B):\label{item:N1_hg_h}
